increase mobile font sizes

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
                                 target="_blank">picturamundi</a></p>
                     </section>
-                    <button id="theme-toggle" onclick="themeToggle()">[theme]</button>
+                    <p><button id="theme-toggle" onclick="themeToggle()">[theme]</button></p>
                 </nav>
 
                 <nav id="script-nav">
