--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#191919">
 </head>
 
-<body id="body" class="light-theme">
+<body id="body" class="dark-theme">
 
     <div id="content-wrapper">
 
@@ -98,9 +98,9 @@
                             relationships: the relationship of different entries to each other, the relationship between
                             the writing and other media it references, and the shifting shape of the collective whole.
                         </p>
-                        <p>All of the above constitutes an organic thing that accompanies me through the reflection
-                            process.</p>
-                        <p>Below, I’ll first outline the simple practice, which can be used with a variety of media,
+                        <p>All of the above constitutes an organic thing that accompanies me and surprises me through
+                            the reflection process.</p>
+                        <p>I’ll first describe the simple practice, which can be used with a variety of media,
                             digital or otherwise. Then, I’ll briefly explain one way that I implement it using a
                             specific medium — software.</p>
                         <h2 id="i-personal-notes">I. Personal notes</h2>
@@ -110,17 +110,18 @@
                         <!--I like how the word "reflection" carries connotations of patience, repetition, and eco. And reflection, like a mirror, is open to any reality that gets put in front of it.-->
                         <p>It starts with a simple note.</p>
                         <h3 id="making-a-note">Making a Note</h3>
-                        <p>A note is a simple, crystal-clear expression of something that matters. It can be a feeling.
+                        <p>A note is a simple, crystal-clear expression of something that matters. It can be a feeling
+                            that I’m relieved to finally be able to put my finger on.
                             A memory. A realization.</p>
-                        <p>Often, the felling of needing to write a note is the feeling that a gift was just given to
-                            me, and I need a fitting place to put it.</p>
+                        <p>Often, the urge to write a note is the feeling that a gift was just given to
+                            me, and I need a fitting way to receive it.</p>
                         <p>Notes are not a place to brainstorm, to practice stream-of-consciousness writing, or to
-                            &quot;journal.&quot; Sometimes writing in those ways is helpful too, but I rarely hold onto
+                            “journal”; Sometimes writing in those ways is helpful too, but I rarely hold onto
                             the result. If something long-form is helpful, it will usually yield a simple note, maybe
                             two or three. I can string these notes together, each one referencing the previous and next
-                            one in the series, but each one standing alone in its own right as well.</p>
-                        <p>I always put the date on a note, and I keep them in chronological order. A note means
-                            something in its place. It might be named something like
+                            one in the series, but each one standing alone in its own right.</p>
+                        <p>I always put the date on a note, and I keep them in chronological order. After all, a note
+                            means something in its context. It might be named something like
                             <code>2023-06-07-avenue-jules-ferry</code>.
                         </p>
                         <p>The value of a note usually becomes apparent with time. Perhaps half of the notes I write
@@ -133,28 +134,32 @@
                         <p>“Stories” are the patterns of recognition that appear once I&#39;m confronted with a given
                             number of my own written reflections. It can be the striking irony between this set of notes
                             and that set of notes; a theme that no one note could express, but which a concert of them
-                            witnesses to beyond a doubt…</p>
+                            witnesses to beyond a doubt; a nagging repetition…</p>
                         <p>The feeling of recognizing a “story” emerge is often the euphoric feeling that I finally have
                             a voice. It does not seem to be my voice, but a voice that is emerging for me, and in order
                             to show even me.</p>
                         <p>What I avoid at all costs is subsuming notes <em>under</em> stories in a hierarchical manner,
                             for example, by creating a story folder and placing notes <em>inside</em> of it. A story is
                             instead a “lens” through which the notes <em>can</em> be viewed as having this or that
-                            meaning to them. But I need to be able to come back to them and notice a new, different
-                            story emerge, without free notes having become fossilized into a structure.</p>
+                            meaning to them. But I need to be able to come back to those same notes and notice a new,
+                            different
+                            story emerge, without them having become fossilized into a structure.</p>
                         <p>As a result, a story must not be a folder. Concretely, a story is a series of links to other
-                            notes, accompanied by as much or as little commentary as I find helpful.</p>
-                        <p>This right here is the heart of the reflective process. It&#39;s a way to tell what
-                            you&#39;ve experienced back to yourself, but <em>to tell it in a way that has meaning</em>.
+                            notes, accompanied by as much or as little commentary as I find helpful. It is a note
+                            connecting other notes.</p>
+                        <p>Discerning stories is the heart of this reflective process. It&#39;s a way to hear
+                            what you&#39;ve experienced, but to hear it in a way that has meaning.
                             I find it matters very little if the meaning is encouraging or tragic, if patterns that
-                            emerge are of progress or patterns of utter loss. The story is enough.</p>
+                            emerge are patterns of progress or patterns of loss. The story is enough.</p>
                         <p>Stories only work because I don&#39;t start with them. I can almost never sit down and simply
                             start “journaling” a story of mine. Instead, I start with no structure at all, no sense of
-                            overarching meaning or direction. I can be lost, if that&#39;s what I truly am, I can be
-                            hurt and confused. The only thing I need to begin is honesty. Honesty enough to be clear.
-                            That&#39;s enough, and that&#39;s a note.</p>
+                            overarching meaning or direction. I can be lost, if that&#39;s where I truly am, I can be
+                            bereft and confused. The only thing I need in order to begin is honesty, honesty enough to
+                            be clear. That&#39;s enough, and that&#39;s a note.</p>
                         <p>I&#39;ve found that if I can take that first step, then time will slowly do the rest. I might
-                            even forget about them for a few months. But if I come back, and I am confronted with them,
+                            even forget about my notes for a few months. But if one day I feel the need, and I come
+                            back, and I am confronted with
+                            them,
                             then eventually, stories begin telling themselves back to me. And hearing the story is the
                             beginning of healing.</p>
                         <hr>
@@ -173,21 +178,22 @@
                         <h2 id="ii-software">II. Software</h2>
                         <h3 id="files-local-plain-text">Files: local plain text</h3>
                         <p>I use local plain text to create my notes and stories. This medium has turned out to be
-                            perfectly suited for this kind of reflection, as well as quite enjoyable.</p>
-                        <p>First, it has the simplicity of writing by hand. None of the compatibility concerns that come
-                            with Rich Text, no opinionated software with unnecessary interfaces and buttons. Like paper,
-                            the screen is a blank space.</p>
+                            perfectly suited for this kind of reflection, as well as very enjoyable.</p>
+                        <p>First, plain text has the simplicity of writing by hand. None of the compatibility concerns
+                            that come
+                            with Rich Text, no software with unnecessary interfaces and buttons. Like paper,
+                            the screen is an open space.</p>
                         <p>I write in Markdown, meaning that, much as with a pen, I write my own formatting by hand in
                             simple, visually intelligible, intuitive markup.</p>
                         <pre class="note">
 # 2023-10-27-note-title
                             
 Here is a thought… an *emphatic* thought.</pre>
-                        <p>More than with any other personal files, it matters to me that my notes and stories be local,
-                            that is, entirely within my possession, and that they be in an open format. They sit within
+                        <p>More than with any other personal files, it matters to me that my notes and stories be local
+                            and in an open format. They sit within
                             a 203 kilobyte folder, an average of 900 bytes per note.</p>
                         <p>There are a few pieces of software which are particularly suited for viewing these files and
-                            putting them in relationship to each other.</p>
+                            acknowledging the relationships between them.</p>
                         <h3 id="apps-markdown-wikis">Apps: markdown wikis</h3>
                         <p>The key feature which markdown editors bring to the table is not so much the ability to
                             render notes as HTML — Markdown is visually intelligible without rendering, a uniquely cool
@@ -197,7 +203,7 @@ Here is a thought… an *emphatic* thought.</pre>
                             using hyperlinks. Linking is an inherent ability of Markdown, which is based on HTML, but
                             you need a Markdown editor that understand HTML for links to be interactive. Without such a
                             program, Markdown notes would be closer to paper notes, and links would be like index
-                            references that tell you what to manually search for.</p>
+                            references that tell you what to manually search for. This is doable as well.</p>
                         <pre class="note">
 A story note contains wikilinks such as [[this one]]. Links refer to various notes, e.g. [[2021-12-11-holy-holy-holy]].
 </pre>
@@ -207,26 +213,32 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                             topography of the reflective process.</p>
                         <p><img class="theme-img" src="assets/images/obsidian-graph.png" alt=""></p>
                         <p>The above graph is an inadequate representation of reflection, since it doesn&#39;t display
-                            the crucial time dimension. But it gives a dim idea of the sense-making process.</p>
-                        <p>Large central nodes are stories. Some notes are epiphanies connected to so many stories that
-                            they are nearly meta-stories themselves.</p>
+                            the crucial time dimension, among other things. But it gives a dim idea of the
+                            sense-making
+                            process.</p>
+                        <p>Large central nodes are stories. Some of the notes are connected to so many stories that
+                            they should perhaps be called epiphanies, nearly meta-stories themselves.</p>
                         <hr>
-                        <p>The app I have most enjoyed using is <a href="https://nota.md/download">nota.md</a>. It is
-                            functional and refreshingly simple.</p>
-                        <p>Another app I have enjoyed using is <a href="">obsidian.md</a>. Despite its less soothing
+                        <p>The app I have most enjoyed using is <a target="_blank"
+                                href="https://nota.md/download">nota.md</a>. It is
+                            very functional and refreshingly simple, a real joy to use.</p>
+                        <p>Another app I have enjoyed using is <a target="_blank"
+                                href="https://obsidian.md/download">obsidian.md</a>.
+                            Despite its less soothing
                             interface and overwhelming feature list, a key advantage of Obsidian is that it will allow
                             you to link to local files which are not themselves plain text.</p>
                         <p>Sometimes I find it very helpful to be able to reference all kinds of media on my machine
                             when I&#39;m writing, like photos or music. While Nota doesn&#39;t know what to do with
                             links like <code>[[2017-foyer.png]]</code>, Obsidian will pull up the linked file for me.
                             Items from throughout my local documents, forgotten images from deep inside certain folder
-                            structures, are soon pulled into the slowly forming web of meaning. It can be exhilarating.
+                            structures, are soon pulled into the slowly forming web of meaning. It can be exhilarating
+                            to watch unfold.
                         </p>
                         <p>Because Nota and Obsidian are apps that browse the same local files, I can switch back and
                             forth between them depending on the kind of writing tools and environment I want in a given
                             moment.</p>
                         <hr>
-                        <p>More could be said, but I think this is what matters.</p>
+                        <p>More could be said, but I think that covers what matters most.</p>
                     </article>
                 </main>
 
