--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <div id="back"><a href="#home">&lt;---- back</a></div>
                     </section>
                     <section>
-                        <h2>outline</h2>
+                        <h2><a onclick="scrollToTop()">outline</a></h2>
                         <p><a onclick="scrollToHeading('consonant-sounds')">consonants: sounds</a></p>
                         <p><a onclick="scrollToHeading('writing-consonants')">consonants: shapes</a></p>
                         <p><a onclick="scrollToHeading('vowels')">vowels</a></p>
@@ -702,7 +702,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <div id="back"><a href="#home">&lt;---------- back</a></div>
                     </section>
                     <section>
-                        <h2>outline</h2>
+                        <h2><a onclick="scrollToTop()">outline</a></h2>
                         <p><a onclick="scrollToHeading('notes')">personal notes</a></p>
                         <p><a onclick="scrollToHeading('software')">software</a></p>
                     </section>
